--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,9 @@ li {
   padding: 1rem 2rem;
 }
 
-.nav-link a:hover {
+#nav-list a:hover {
   background-color: #e0aed0;
+  border-radius: 10px;
 }
 
 #weclome-section {
@@ -68,9 +69,14 @@ h2 {
   color: white;
 }
 
-@media (max-width: 88px) {
+@media (max-width: 660px) {
   h2 {
-    font-size: 2rem;
+    font-size: 1rem;
+  }
+  #nav-list {
+    padding: 2px;
+    font-size: 10px;
+    width: 100%;
   }
 }
 
@@ -78,7 +84,6 @@ h2 {
   height: calc(100% - 6.8rem);
   width: 100%;
   object-fit: cover;
-  display: inline;
 }
 
 .project-tile {
@@ -96,6 +101,16 @@ h2 {
   max-width: 1280px;
   margin: 0 auto;
   margin-bottom: 6rem;
+}
+
+.project-grid a {
+  text-decoration: none;
+}
+
+.project-tile {
+  color: white;
+  font-size: large;
+  padding: 4%;
 }
 
 #contact {
@@ -121,9 +136,21 @@ h2 {
   color: white;
   text-decoration: none;
   font-size: 1em;
-  padding: 1em 1em;
+  padding: 1rem 1rem;
+}
+
+#profile-link a {
+  text-decoration: none;
+  padding: 1rem ;
+  color: white;
+  font-size: 1em;
+}
+
+i {
+  padding: 7px;
 }
 
 #profile-link a:hover {
   background-color: #e0aed0;
+  border-radius: 10px;
 }
